# ym_skate_sim2real

./: .gitignore  OBS_LOGGING_README.md  dataMotor.txt  log_capture.py  obs_log.txt  sim2sim_vs_sim2real_对比.md  start_logging.sh  test_phase.cpp  ymbot_e_witharm_log.sh
src/data/: sim2real_onnx_rec_joint.txt  sim2real_onnx_send_joint.txt  sim2sim_onnx_rec_joint.txt  sim2sim_onnx_send_joint.txt
src/rl_additional/SOEM_MasterStack/: CMakeLists.txt  README.md
src/rl_additional/SOEM_MasterStack/app/: .transmit.c.swp  CMakeLists.txt  main.c  main.cpp  motor_control.c  motor_control.h  transmit.c  transmit.h
src/rl_additional/yesense/: CMakeLists.txt
src/rl_additional/yesense/launch/: run_without_rviz.launch
src/rl_additional/yesense/src/: analysis_data.h  yesence_share_memory.cpp  yesense_driver.cpp  yesense_driver.h  yesense_node.cpp
src/scripts/: bismih_compare_joint.py  compare_joint.py  compare_velocity.py  erro_compute.py  sim_real_compare.py
src/ymbot_amp_devel/: CMakeLists.txt  package.xml  readme.md
src/ymbot_amp_devel/app/: CMakeLists.txt  motor_control.c  motor_control.h  transmit.cpp  transmit_arm.h
src/ymbot_amp_devel/config/: joy.yaml  joy_bluetooth.yaml  motor_config.yaml
src/ymbot_amp_devel/include/ymbot_amp_devel/: MotorInterface copy.hpp  MotorInterface.hpp  SharedMemory.hpp  SharedMemoryArm.hpp  amp_controller.hpp  average_filter.hpp  eumotor_interface.h  parallejoint.hpp  phase_generator.hpp  ymbot_joint_eu.h
src/ymbot_amp_devel/launch/: cartpole_amp_sim2sim.launch  g1_amp_sim2sim.launch  joy_teleop.launch  skate_11dof_rl_sim2real.launch  skate_amp_rl_sim2real.launch  ymbot_e_amp_sim2real.launch  ymbot_e_amp_sim2sim.launch  ymbot_e_rl_sim2real_org.launch  ymbot_e_rl_sim2real（复件）.launch  ymbot_e_rl_sim2sim.launch
src/ymbot_amp_devel/robots/cartpole/mjcf/: cartpole.xml  cartpoles.xml
src/ymbot_amp_devel/robots/cartpole/onnx/: policy.onnx
src/ymbot_amp_devel/robots/cartpole/urdf/: cartpole.urdf
src/ymbot_amp_devel/robots/cartpole/usd/: .asset_hash  config.yaml
src/ymbot_amp_devel/robots/skating_ym_e/: manager_based_rl_env_v4.py
src/ymbot_amp_devel/robots/skating_ym_e/meshes/: left_ankle_roll_link.STL  right_ankle_roll_link.STL  right_ankle_roll_link_wheel.STL  wheel.STL
src/ymbot_amp_devel/robots/skating_ym_e/mjcf/: ymboy_13dof_w.xml
src/ymbot_amp_devel/robots/skating_ym_e/policy/2026-01-06_22-31-03/exported/: policy.pt  policy_0106.onnx  policy_01141541.onnx  policy_01141640.onnx  policy_0201.onnx  policy_02032109.onnx  policy_02032247.onnx  robots_play_data.csv
src/ymbot_amp_devel/robots/skating_ym_e/policy/2026-01-06_22-31-03/git/: humanoid_isaac_dash_proj.diff
src/ymbot_amp_devel/robots/skating_ym_e/policy/2026-01-06_22-31-03/params/: agent.pkl  agent.yaml  env.pkl  env.yaml
src/ymbot_amp_devel/robots/skating_ym_e/policy_11dof/2026-02-05_22-23-08/exported/: policy.onnx  policy.pt
src/ymbot_amp_devel/robots/skating_ym_e/policy_11dof/2026-02-05_22-23-08/params/: agent.pkl  agent.yaml  env.pkl  env.yaml
src/ymbot_amp_devel/robots/unitree_g1/mjcf/: g1_23dof_base_with_points.xml  g1_23dof_engineai.xml  g1_23dof_personal.xml
src/ymbot_amp_devel/robots/unitree_g1/onnx/: policy.onnx  policy_old.onnx
src/ymbot_amp_devel/robots/unitree_g1/urdf/: g1_23dof.urdf  g1_23dof_without_points.urdf
src/ymbot_amp_devel/robots/ymbot_e/mjcf/: ymboy-23dof.xml  ymboy_22dof.xml  ymboy_22dof_base.xml
src/ymbot_amp_devel/robots/ymbot_e/onnx/: policy.onnx  policy_11.10_76000.onnx  policy_LAB_741.onnx  policy_LAB_76.onnx  policy_LAB_77.onnx  policy_LAB_78.onnx  policy_LAB_781.onnx  policy_LAB_782.onnx  policy_LAB_783.onnx  policy_LAB_784.onnx  policy_LAB_792.onnx  policy_rl_615.onnx  policy_rl_623.onnx  policy_rl_623_guo.onnx  policy_rl_623_pan.onnx  policy_rl_624.onnx  policy_rl_6243.onnx  policy_rl_66.onnx  policy_rl_661.onnx  policy_rl_662.onnx  policy_rlll.onnx  训练.txt
src/ymbot_amp_devel/robots/ymbot_e/urdf/: ymboy_22dof.urdf
src/ymbot_amp_devel/robots/ymbot_e/ymboy/: ymbot.py
src/ymbot_amp_devel/robots/ymbot_e/ymboy/env/: 1_tienkung_env.py  2_walk_cfg.py
src/ymbot_amp_devel/robots/ymbot_e/ymboy/meshes/: left_ankle_pitch_link.STL  left_ankle_roll_link.STL  left_elbow_link.STL  left_hip_pitch_link.STL  left_hip_yaw_link.STL  left_shoulder_pitch_link.STL  left_shoulder_roll_link.STL  left_shoulder_yaw_link.STL  left_wrist_yaw_link.STL  right_ankle_pitch_link.STL  right_ankle_roll_link.STL  right_elbow_link.STL  right_hip_pitch_link.STL  right_hip_yaw_link.STL  right_shoulder_pitch_link.STL  right_shoulder_roll_link.STL  right_shoulder_yaw_link.STL  right_wrist_yaw_link.STL  waist_yaw_link.STL  ymboy-23dof.urdf  ymboy-24dof.urdf
src/ymbot_amp_devel/robots/ymbot_e/ymboy/motions/: cvs_to_txt.py  isaaclab_viewer_cvs.py  isaacsim_viewer_txt_for_ymboy.py
src/ymbot_amp_devel/robots/ymbot_e/ymboy/motions/cvs_origin/: !!!!turn_right.csv  !!!turn_left.csv  backward.csv  walk1.csv  walk2.csv  walk3.csv  walk4.csv  ymboy_lab_whole_body_tracking1.yaml
src/ymbot_amp_devel/robots/ymbot_e/ymboy/motions/txt/: backward_clipped_0_150.txt  walk1_subject1_clipped_2750_2950.txt  walk1_subject1_clipped_2820_2880.txt  walk1_subject1_clipped_3200_3400.txt  walk1_subject1_clipped_3290_3350.txt  walk1_subject1_clipped_90_200.txt
src/ymbot_amp_devel/robots/ymbot_e/ymboy/onnx/: policy_11.10_85000.onnx
src/ymbot_amp_devel/robots/ymbot_e/ymboy/urdf/: ymboy-23dof.urdf
src/ymbot_amp_devel/robots/ymbot_e/ymboy/usd/: .asset_hash  config.yaml
src/ymbot_amp_devel/src/: MotorInterface.cpp  amp_controller copy.cpp  amp_controller.cpp  amp_sim2real copy.cpp  amp_sim2real.cpp  amp_sim2real.cpp.bak  amp_sim2real_11dof.cpp  amp_sim2sim.cpp  parallejoint.cpp  ymbot_joint_eu_api.cpp  ymboy_eumotor_interface.cpp
